--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "n8n-nodes-ntfy.sh",
   "description": "A custom node for sending notifications via ntfy.",
-  "version": "0.1.6-alpha.3",
+  "version": "0.1.7",
   "author": {
     "name": "Austin Kurpuis",
     "email": "a@kurpuis.com",
